# Extract-Template

./: .gitignore  README.md  dune-project  et.opam
dep/: Makefile  _CoqProject  dune-project  vic.opam
dep/extract/: Extract.v  dune
dep/lib/: Victor.v  dune
lib/: dune  example.ml
